# personal-context

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  install.sh  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docker-publish.yml
src/personal_context/: __init__.py  config.py  server.py
src/personal_context/connectors/: __init__.py  web.py
src/personal_context/db/: __init__.py  connection.py  schema.py
src/personal_context/embeddings/: __init__.py  client.py
src/personal_context/search/: __init__.py  hybrid.py
src/personal_context/sync/: __init__.py  orchestrator.py  pull.py
src/personal_context/templates/: index.html
src/personal_context/upstream/: __init__.py  base.py  outline.py  registry.py  trilium.py
test/: main.py  simple.py
