[project]
name = "personal-context"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.0.0",
    "sqlite-vec==0.1.7a2",
    "httpx",
    "beautifulsoup4",
    "pydantic>=2.0",
    "pydantic-settings",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "jinja2>=3.0.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.14",
    "ruff>=0.14.14",
]
